<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Testing">

    <EditText
        android:id="@+id/etno1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number 1" />

    <EditText
        android:id="@+id/etno2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number 2" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sub" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="div" />

</LinearLayout>