<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Result">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="asdf"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/tvResult"/>

</LinearLayout>